feat: add study page backend
